srcs/nginx/nginx.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-dep 
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx-services
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
---
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
      - port: 80
        targetPort: 80
        name: http
        protocol: TCP
      - port: 443
        targetPort: 443
        name: https
        protocol: TCP
      - port: 22
        targetPort: 22
        name: ssh
        protocol: TCP
